--- a/day14/Cargo.toml
+++ b/day14/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "aoc2020-day10"
+name = "aoc2020-day14"
 version = "0.1.0"
 authors = ["Davide Aversa <thek3nger@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+regex = "1"
 common = { path = "../common" }
